--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,4 +79,8 @@ jobs:
         env:
             SSH_AUTH_SOCK: /tmp/ssh_agent.sock
     
+name: Discord notification
+  env:
+    DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+  uses: Ilshidur/action-discord@master
     needs: [linter, molecule]
